# BundleAdjustment_Benchmarks

./: README.md
data/: problem-39-18060-pre.txt
src/: BATypeUtils.h  BandedBlockedSparseQR_Ext.h  BlockAngularSparseQR_Ext.h  BlockDiagonalSparseQR_Ext.h  CMakeLists.txt  CameraMatrix.cpp  CameraMatrix.h  DenseBlockedSparseQR.h  DenseBlockedThinQR.h  DenseBlockedThinSparseQR.h  DenseSubblockBlockedSparseQR.h  DistortionFunction.cpp  DistortionFunction.h  Logger.h  MathUtils.h  SparseBlockCOO_Ext.h  SparseBlockCOO_Ext2.h  SparseQR_Ext.h  TallSkinnyQR.h  Utils.h  bundle_adjustment_bench.cpp  bundle_adjustment_dino.cpp  bundle_adjustment_large.cpp  bundle_adjustment_solver_new.cpp  bundle_adjustment_solver_test.cpp  bundle_adjustment_test.cpp  levmar_solver_test.cpp  simplelm_test.cpp
src/Eigen_ext/: BacktrackLevMarqCholesky.h  BacktrackLevMarqMore.h  BacktrackLevMarqQRChol.h
src/Eigen_ext/LevenbergMarquardt/: LMonestep.h  LMpar.h  LMqrsolv.h  LevenbergMarquardt.h
src/Optimization/: BAFunctor.cpp  BAFunctor.h  BAFunctorDino.cpp  BAFunctorDino.h  SimpleLM.h
